--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "build/**/*"
   ],
   "dependencies": {
-    "aws-sdk": "^2.1113.0",
+    "@aws-sdk/client-dynamodb": "^3.556.0",
+    "@aws-sdk/credential-providers": "^3.556.0",
     "cli-table3": "^0.6.3",
     "commander": "^9.1.0",
     "del": "^6.0.0",
@@ -61,7 +62,7 @@
     "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "aws-sdk-mock": "^5.8.0",
+    "aws-sdk-client-mock": "^4.0.0",
     "babel-jest": "^29.4.3",
     "dynalite": "^3.2.2",
     "eslint": "^7.32.0",
