--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "fs-extra": "^10.1.0",
     "lodash": "^4.17.21",
     "p-each-series": "^2.2.0",
-    "ts-import": "^4.0.0-beta.8"
+    "ts-import": "^4.0.0-beta.8",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.55.0",
