--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "lodash": "^4.17.21",
     "p-each-series": "^2.2.0",
     "ts-import": "^4.0.0-beta.8",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.55.0",
@@ -85,7 +86,6 @@
     "ts-jest": "^29.0.5",
     "ts-jest-resolver": "^2.0.0",
     "ts-loader": "^9.2.8",
-    "ts-node": "^10.7.0",
     "typescript": "^4.9.5",
     "webpack": "^5.72.0"
   },
