--- a/src/templates/commonjs/migration.template
+++ b/src/templates/commonjs/migration.template
@@ -1,9 +1,12 @@
+const { transformDynamoData, restoreFromBackup } = require("./functions")
+const event = require("./migration-event")
+
 module.exports = {
   async up(ddb) {
-    // TODO write your migration here.
+    await transformDynamoData(event);
   },
 
   async down(ddb) {
-    // TODO write the statements to rollback your migration 
-  }
+    
+  },
 };
