--- a/src/templates/ts/migration.template
+++ b/src/templates/ts/migration.template
@@ -1,5 +1,5 @@
 import * as AWS from '@aws-sdk/client-dynamodb'
-import { TransformEvent, TransformType, transformDynamoData } from '../lib/functions'
+import { TransformEvent, TransformType, transformDynamoData } from '../lib/transform-functions'
 
 const event: TransformEvent = {
   table: `${process.env.API_STACK}-<table-name>`,
